<resources>
	<string name="kosong"></string>
    <string name="app_name">Bisnis.com</string>
    <string name="aplikasi">Bisnis.com</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_open">Slider Menu Opened</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="refersh">Refresh</string>
    <string name="Artikel_Terkait">Artikel Terkait</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="cari">Cari</string>
    <string name="share">Share</string>
    <string name="save">Save Berita</string>
    	<string name="list_save">Berita Saved</string>
        <string name="bisnis_bali">Bisnis Bali</string>
            <string name="bisnis_jateng">Bisnis Jateng</string>
                <string name="bisnis_jatim">Bisnis Jatim</string>
                    <string name="bisnis_makassar">Bisnis Makassar</string>
                        <string name="bisnis_batam">Bisnis Batam</string>
                      	   <string name="bisnis_sumatra">Bisnis Sumatra</string>
    <string name="version_name">Version 2.5.8</string>
      <string name="version_code">18</string>
    <string-array name="nav_name">
        <item >Berita Terbaru</item>
         <item >Headline</item>
        <item >Terpopuler</item>
        <item >Unggulan</item>
        <item >Trending News</item>
        <item >Editors Choice</item>
         <item >Bookmarks</item>
         
       <item>Kabar24</item>
       <item >Market</item>
       <item >Finansial</item>
       <item >Industri</item>
        <item >Otomotif</item>
       <item >Jakarta Raya</item>
       <item>Bola</item>
       <item>Life&amp;style</item>
        <item >Gadget</item>
       <item >Traveling</item>
        <item >Properti</item>
        <item >Sport</item>


       <item>Koran Bisnis</item>
       <item >Bisnis Syariah</item>
       <item>Management</item>
       <item >Entrepreneur</item>
       
       <item >Info</item>
       <item >Inforial</item>
  
       
       <item >Hasil Pencarian</item>
    </string-array>
        <string-array name="headlines">
        <item >breaking</item>
        <item >headlines</item>
        <item >populer</item>
        <item >tranding</item>
        <item >mustread</item>
        <item >editorchoices</item>
    </string-array>
        <string-array name="canal_id">
        <item >0</item>
        <item >headlines</item>
        <item >populer</item>
        <item >mustread</item>
        <item >tranding</item>
        <item >editorchoices</item>
        <item >bookmark</item>
        
        <item >186</item>
        <item >194</item>
        <item >5</item>
        <item >43</item>
        <item >272</item>
        <item >382</item>
        <item >392</item>
		<item >197</item>
        <item >277</item>
        <item >222</item>
            <item >47</item>
            <item >57</item>
        <item >242</item>
        <item >231</item>
		<item >52</item>
        <item >258</item>
	
 		<item >243</item>
 		<item >73</item>
 		
        <item>cari</item>
    </string-array>
    <string-array name="array_frontpage_id">
        <item >0</item>
        <item >editorchoices</item>
        <item >saham</item>
        <item >hargaemas</item>
        <item >finansial</item>

    </string-array>
    <string-array name="array_frontpage">
        <item>Berita Terbaru</item>
        <item>Editors Choice</item>
        <item>Rekomendasi Saham</item>
        <item>Harga Emas</item>
        <item>Finansial</item>

    </string-array>
    <string-array name="array_allchanel_id">
        <item >186</item>
        <item >194</item>
        <item >5</item>
        <item >43</item>
        <item >272</item>
        <item >382</item>
        <item >392</item>
        <item >197</item>
        <item >277</item>
        <item >222</item>
        <item >47</item>
        <item >57</item>
        <item >242</item>
        <item >231</item>
        <item >52</item>
        <item >258</item>
        <item >243</item>
        <item >73</item>
    </string-array>
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Push Notifications</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on Demo Server.</string>
    <string name="server_registered">From Demo Server: successfully added device!</string>
    <string name="server_unregistered">From Demo Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on Demo Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on Demo Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string-array name="img_array">
        <item>http://mangaindo.co/wp-content/manga/244/1/00.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/01.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/02.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/00.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/01.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/02.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/00.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/01.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/02.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/00.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/01.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/02.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/00.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/01.jpg</item>
        <item>http://mangaindo.co/wp-content/manga/244/1/02.jpg</item>
    </string-array>
    <string-array name="jazzy_effects">
        <item>Standard</item>
        <item>Tablet</item>
        <item>CubeIn</item>
        <item>CubeOut</item>
        <item>FlipVertical</item>
        <item>FlipHorizontal</item>
        <item>Stack</item>
        <item>ZoomIn</item>
        <item>ZoomOut</item>
        <item>RotateUp</item>
        <item>RotateDown</item>
        <item>Accordion</item>
    </string-array>
</resources>